[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1.0"

sqlx = "0.7"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"

reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
